fixed overlaping issue for bottom ad.

--- a/src/components/DynamicFooter/styles.module.scss
+++ b/src/components/DynamicFooter/styles.module.scss
@@ -5,6 +5,7 @@
   border-top: 1px solid #e6e6e6;
   background-color: $black;
   color: white;
+  margin-top:5px;
 
   .dynamicCategories {
     padding: 15px;
